# nlsoft

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  requirements.txt  setup.sh
controller/: ;  constraints.py  cost.py  dynamic_model.py  newton_raphson.py  soloway_nr.py  soloway_nr1.py
controller/dynamic_model/: dynamic_model.py
cpp/: CMakeLists.txt  arduino_test_valgrind.cpp  figure_eight_target.cpp  figure_eight_target.hpp  matrix  matrix.cpp  matrix.hpp  neural_network_utilities.cpp  neural_network_utilities.h  neural_network_utilities.hpp  numeric.cpp  numeric.hpp  test.cpp
cpp/arduino_ide_test/: matrix.cpp  neural_network_utilities.cpp  neural_network_utilities.hpp  nn4mc.cpp  nn4mc.h  parameters.h
cpp/arduino_test/: CMakeLists.txt  Makefile  activations.cpp  arduino_test.ino  cmake_install.cmake  controller.hpp  dense.cpp  figure_eight_target.cpp  figure_eight_target.hpp  matrix.cpp  matrix.hpp  motors.cpp  motors.hpp  neural_network_utilities.cpp  neural_network_utilities.hpp  nlsoftConfig.cmake.in  nn4mc.cpp  nn4mc.hpp  parameters.h  platformio.ini  signals.cpp  signals.hpp
cpp/arduino_test/cxx_arduino_test/: a.out  arduino_test_cxx.cpp  test.cpp
cpp/arduino_test/include/: CMakeLists.txt  Makefile  activations.h  cmake_install.cmake  controller.hpp  dense.hpp  hasel.hpp  hasel_signals.hpp  helpers.hpp  motors.hpp  nn4mc.hpp  signals.hpp
cpp/arduino_test/motors_slave/: arduino_test.ino  dynamixel_functions.cpp  dynamixel_functions.hpp  motors_slave.ino
cpp/arduino_test/src/: CMakeLists.txt  Makefile  arduino_test.ino  arduino_test.ino.cpp  cmake_install.cmake  dense.cpp  figure_eight_target.cpp  hasel.cpp  hasel_signals.cpp  helpers.cpp  motors.cpp  nn4mc.cpp  signals.cpp
cpp/arduino_test/test/: CMakeLists.txt  arduino_test_cxx.cpp
cpp/dynamixel_motors/: dynamixel_motors.ino
cpp/dynamixel_motors/dynamixel/: dynamixel.ino
cpp/dynamixel_motors/find_dynamixels/: find_dynamixels.ino
cpp/dynamixel_motors/read_write_ax/: read_write_ax.ino
cpp/dynamixel_motors/read_write_mx/: read_write_mx.ino
cpp/example_model_code/: activations.cpp  dense.cpp  dense.h  dense.hpp  nn4mc.cpp  nn4mc.h  nn4mc.hpp  parameters.h  parameters.hpp  sys_id_ISER_exp.ino
cpp/sketch_jan21a/: sketch_jan21a.ino
cpp/sys_id/: dense.cpp  nn4mc.hpp  parameters.h
cpp/test/: a.out  arduino_test.cpp  controller.hpp  dense.cpp  helpers.cpp  helpers.hpp  helpers.i  helpers.py  helpers_wrap.cxx  matrix.cpp  motors.cpp  motors.hpp  signals.cpp  signals.hpp  test.py  wrap_helper_code_swig.sh
cpp/tilting/: CMakeLists.txt  platformio.ini
cpp/tilting/cxx_arduino_test/: a.out
cpp/tilting/include/: Channels.h  CircularBuffer.h  MCUChannel.h  MCUCore.h  MicroTimer.h  PacketBuffer.h  SRTxMCU.h  System.h  activations.h  controller.hpp  dense.h  gru.h  hasel.hpp  helpers.hpp  matrix.hpp  motors.hpp  nn4mc.h  parameters.h  protocol.h  signals.hpp  swirl_target.hpp
cpp/tilting/motors_slave/: dynamixel_functions.cpp  dynamixel_functions.hpp  motors_slave.ino
cpp/tilting/src/: MCUChannel.cpp  MCUCore.cpp  MicroTimer.cpp  PacketBuffer.cpp  System.cpp  activations.cpp  arduino_test.ino  chnl_analog_in.cpp  chnl_analog_out.cpp  chnl_core.cpp  chnl_digital_in.cpp  chnl_digital_out.cpp  chnl_driver.cpp  chnl_sensor.cpp  chnl_testing.cpp  chnl_ultravolt.cpp  codec.cpp  dense.cpp  gru.cpp  hasel.cpp  helpers.cpp  matrix.cpp  motors.cpp  nn4mc.cpp  signals.cpp  swirl_target.cpp
cpp/tilting/test/: Makefile  arduino_test_tilting.cpp  cmake_install.cmake  test_rolling.cpp
cpp/tilting/test/include/: Makefile  cmake_install.cmake
cpp/tilting/test/src/: Makefile  cmake_install.cmake
cpp/utilities/: matrix.cpp  matrix.hpp  neural_network_utilities.cpp  neural_network_utilities.hpp
data/: data_Jan_23_2020_3.txt  data_Jan_23_2020_4.txt  data_Jan_23_2020_6.txt  data_Jan_23_2020_8.txt
dynamixels/: dynamixels.py  dynamixels1.py
gym/: block_gym.py
include/dynamixels/: README.md
include/optitrack/: README.md  vrpn_client.h
lib/: CMakeLists.txt
logger/: logger.py
optitrack/: optitrack.py  optitrack1.py  thread_based_optitrack.py  vrpn_client.py
python/: run_all_training.sh  setup.sh
python/block_gym/: block_gym.py  block_gym_vani.py
python/controller/: constraints.py  cost.py  functions.py  (+6 more)
signals/: serial_client.py  spi_read.py
sketch_jan21a/: sketch_jan21a.ino
test/: '  .~lock.data_Mar_12_2020_8.txt#  1  1q  2q  \  calibration_curve_test.py  circle_data_collect.py  data_Jan_23_2020.txt  data_Jan_23_2020_1.txt  data_Jan_23_2020_2.txt  data_Jan_23_2020_5.txt  data_Jan_23_2020_6.txt  data_Jan_23_2020_7.txt  data_collect.py  data_collection.py  dynamixel_glamour.py  dynamixel_test.py  experimental_gpc.py  good_sys_id.hdf5  gpc_controller.py  log_output.json  new_sys_id.hdf5  output.out  output_bus.out  plot_results.ipynb  profile.out  reboot.py  reset.py  sine.py  square_wave.py  sys_id.hdf5  sys_id_rnn.hdf5  test.cpp  test.py  testing_dynamics.py  training_sys_int.py  training_sys_int_rnn.py  tuning_gpc_controller.py  wand.py
utilities/: util.py
(+49 files in other folders)
